changed button om main pages

--- a/students/templates/students/group_list.html
+++ b/students/templates/students/group_list.html
@@ -41,14 +41,14 @@
                       <td> {{ group.notes }} </td>
 
                       <td>
-                            <a class="btn btn-primary active" href="{% url 'group:edit_group' group.id %}" role="button">
+                            <a class="btn btn-primary btn-sm" href="{% url 'group:edit_group' group.id %}" role="button">
                             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                                   редактировать группу
                             </a>
                       </td>
 
                        <td>
-                           <a class="btn btn-primary active" href="#" role="button">
+                           <a class="btn btn-primary btn-sm" href="#" role="button">
                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                                           удалить группу
                             </a>
