--- a/students/templates/students/group_form.html
+++ b/students/templates/students/group_form.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
 
-{% block title %} Edit_group {% endblock title %}
+{% block title %} {{ page_title }} {% endblock title %}
 
 
 {% block container %}
 
-    <h2 class="text-center"> {% block name_table %} Редактирование группы {% endblock name_table %} </h2>
+    <h2 class="text-center"> {% block name_table %} {{ page_title }} {% endblock name_table %} </h2>
 
 
         <div class="container-fluid">
