added delete group

--- a/students/templates/students/group_form.html
+++ b/students/templates/students/group_form.html
@@ -19,7 +19,7 @@
                     </table>
 
                     <div class="col-sm-offset-5 col-sm-7">
-                        <input class="btn btn-primary btn-sm" type="Submit" value="Редактировать">
+                        <input class="btn btn-primary btn-sm" type="Submit" value="Подтвердить">
                     </div>
                 </div>
             </form>
