--- a/students/templates/students/group_list.html
+++ b/students/templates/students/group_list.html
@@ -48,7 +48,7 @@
                       </td>
 
                        <td>
-                           <a class="btn btn-primary btn-sm" href="#" role="button">
+                           <a class="btn btn-primary btn-sm" href="{% url 'group:delete_group' group.id %}" role="button">
                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                                           удалить группу
                             </a>
@@ -56,7 +56,7 @@
                   </tr>
               {% empty%}
                   <tr>
-                      <td>Идет формирование списка курсов. Просим извенения за некоторые неудобства</td>
+                      <td>Идет формирование списка групп. Просим извенения за некоторые неудобства</td>
                   </tr>
               {% endfor %}
           </tbody>
