--- a/templates/base.html
+++ b/templates/base.html
@@ -71,8 +71,10 @@
 
      <footer class="panel-footer">
          <div class="container">
-             <p>&copy; Ivan Simeyko 2015</p>
-             <a href="#">Back to top</a>
+             <p>
+                 <span class="left">&copy; Ivan Simeyko 2015</span>
+                 <span class="pull-right"><a href="#">Back to top</a></span>
+             </p>
          </div>
      </footer>
 
