--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav nav-pills pull-left">
-                    <li class="{% block nav_class_index %}{% endblock %}"><a href="#">Home</a></li>
+                    <li class="{% block nav_class_index %}{% endblock %}"><a href="{% url 'group_list' %}">Home</a></li>
                     <li class="{% block nav_class_engineering %}{% endblock %}"><a href="#">Engineering</a></li>
                     <li class="{% block nav_class_programming %}{% endblock %}"><a href="#">Programming</a></li>
                     <li class="{% block nav_class_about %}{% endblock %}"><a href="#">About me</a></li>
