added student modify

--- a/students/templates/students/group_list.html
+++ b/students/templates/students/group_list.html
@@ -24,7 +24,7 @@
                   <th>#</th>
                   <th>Группа</th>
                   <th>Староста</th>
-                  <th> Характеристика группы </th>
+                  <th> Описание группы </th>
                   <th>Редактировать группу</th>
                   <th>Удалить группу</th>
               </tr>
