--- a/students/templates/students/student_detail.html
+++ b/students/templates/students/student_detail.html
@@ -64,11 +64,11 @@
       </div>
 
              <p>
-                 <a class="btn btn-primary btn-sm" href="№" role="button">
+                 <a class="btn btn-primary btn-sm" href="{% url 'student:edit_student' student.id %}" role="button">
                  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                        Редактировать данные
             </a>
-            <a class=" pull-right  btn-primary btn-sm" href=№ role="button">
+            <a class=" pull-right  btn-primary btn-sm" href='#' role="button">
                  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                        Удалить данные
             </a>
