added delete students

--- a/students/templates/students/student_detail.html
+++ b/students/templates/students/student_detail.html
@@ -68,7 +68,7 @@
                  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                        Редактировать данные
             </a>
-            <a class=" pull-right  btn-primary btn-sm" href='#' role="button">
+            <a class=" pull-right  btn-primary btn-sm" href="{% url 'student:delete_student' student.id %}" role="button">
                  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                        Удалить данные
             </a>
