--- a/students/templates/students/group_confirm_delete.html
+++ b/students/templates/students/group_confirm_delete.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
 
-{% block title %} Удаление группы {% endblock title %}
+{% block title %} {{ page_title }} {% endblock title %}
 
 
 {% block container %}
 
 
-    <h2 class="text-left"> Delete {{ group.title }} </h2>
+    <h2 class="text-left"> {{ page_title }} </h2>
 
         <form method="post" >
             {% csrf_token %}
