--- a/templates/base.html
+++ b/templates/base.html
@@ -37,11 +37,9 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav nav-pills pull-left">
-                    <li class="{% block nav_class_index %}{% endblock %}"><a href="{% url 'group_list' %}">Home</a></li>
-                    <li class="{% block nav_class_engineering %}{% endblock %}"><a href="#">Engineering</a></li>
-                    <li class="{% block nav_class_programming %}{% endblock %}"><a href="#">Programming</a></li>
-                    <li class="{% block nav_class_about %}{% endblock %}"><a href="#">About me</a></li>
-                    <li class="{% block nav_class_contact %}{% endblock %}"><a href="#">Contacts</a></li>
+                    <li class="{% block nav_class_index %}{% endblock %}"><a href="{% url 'group_list' %}">Главная</a></li>
+                    <li class="{% block nav_class_engineering %}{% endblock %}"><a href='{% url 'student:all_student'%}'>Студенты</a></li>
+                    <li class="{% block nav_class_contact %}{% endblock %}"><a href="#">Контакты</a></li>
                 </ul>
 
             </div><!--/.nav-collapse -->
