--- a/students/templates/students/student_list.html
+++ b/students/templates/students/student_list.html
@@ -4,7 +4,10 @@
 {% load staticfiles %}
 
 
-{% block title %} {{ group.title }} {% endblock title %}
+{% block title %} Список студентов {% endblock title %}
+
+
+{% block nav_class_students %} active {% endblock %}
 
 
 {% block container %}
