--- a/students/templates/students/group_list.html
+++ b/students/templates/students/group_list.html
@@ -25,7 +25,7 @@
                   <th>Группа</th>
                   <th>Староста</th>
                   <th> Описание группы </th>
-                  <th>Редактировать группу</th>
+                  <th>Редактировать данные</th>
                   <th>Удалить группу</th>
               </tr>
           </thead>
@@ -43,7 +43,7 @@
                       <td>
                             <a class="btn btn-primary btn-sm" href="{% url 'group:edit_group' group.id %}" role="button">
                             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                                  редактировать группу
+                                  редактировать данные
                             </a>
                       </td>
 
