--- a/students/templates/students/group_list.html
+++ b/students/templates/students/group_list.html
@@ -16,7 +16,9 @@
         </ul>
     {% endif %}
 
-    <table class="table table-bordered">
+    <div class="well">
+    <div class="table-responsive">
+    <table class="table table-hover">
           <h2 class="text-center"> Список групп в нашей академии! </h2>
 
           <thead>
@@ -61,6 +63,8 @@
               {% endfor %}
           </tbody>
       </table>
+    </div>
+    </div>
 
 
     <div class="left">
