--- a/loginsys/templates/loginsys/login.html
+++ b/loginsys/templates/loginsys/login.html
@@ -40,7 +40,7 @@
         <p> Eсли у Вас еще нет аккаунта пройдите, пожалуйста, легкую процедуру
             <a href="{% url 'loginsys:register' %}">регистрации.</a></p>
         <p> Eсли Вы забыли данные для входа на сайт воспользуйтесь
-            <a href="#">этой</a>
+            <a href="{% url 'contacts:create_contact' %}">этой</a>
             формой и мы вышлем их Вам на электронную почту.</p>
      </div>
 {% endblock container %}
